# hello-world-windows

./: CMakeLists.txt  auto_build.sh  ims.ntp
include-local/: libim.h
src/: ims.cpp  libim.cpp
